removed scripts in root packag json to build the cdk and use the cdk command. updated workflow yml files to specify the cdk subfolder in which the build and diff and deply commands should run

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -30,9 +30,11 @@ jobs:
         run: npm ci
 
       - name: Build CDK Stack
+        working-directory: ./cdk-deployment
         run: npm run build
 
       - name: Deploy AWS CDK Stack
+        working-directory: ./cdk-deployment
         run: "npx cdk deploy CdkPipelineEbDemoStack-cdk-is-subfolder --ci --require-approval never --no-asset-metadata"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
