--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,9 +28,11 @@ jobs:
         run: npm ci
 
       - name: Build CDK Stack
+        working-directory: ./cdk-deployment
         run: npm run build
 
       - name: Diff AWS CDK Stack
+        working-directory: ./cdk-deployment
         run: "npx cdk diff CdkPipelineEbDemoStack-cdk-is-subfolder --ci --require-approval never --no-asset-metadata"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
