--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "my_webapp",
   "version": "1.0.0",
   "main":"app.js",
-    "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "build": "cd cdk-deployment && npm run build",
-    "cdk": "cd cdk-deployment && cdk"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
